trying to fix js not working on heorku

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -32,8 +32,7 @@
        
         <script src="/js/replies.js"></script>
         <script src= "/js/likes.js"></script>
-        
-        <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js"></script>
+        <script src="/js/jquery.js"></script>
 
         <script src="/js/bootstrap.min.js"></script>
 
