--- a/github_page/gh-page.erb
+++ b/github_page/gh-page.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="Nanotwitter : Team Thunderbear&#39;s Nanotwitter Project">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <style>
-      .mySlides {display:none}
+      /*.mySlides {display:none}*/
       .w3-left, .w3-right, .w3-badge {cursor:pointer}
       .w3-badge {height:13px;width:13px;padding:0}
     </style>
@@ -47,25 +47,23 @@
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
 
 <div class="w3-content w3-display-container" style="max-width:800px">
-  <img class="mySlides" src="/images/slideshow_1.png" style="width:100%">
-  <img class="mySlides" src="/images/slideshow_2.png" style="width:100%">
-  <img class="mySlides" src="/images/slideshow_3.png" style="width:100%">
-  <img class="mySlides" src="/images/slideshow_4.png" style="width:100%">
-  <img class="mySlides" src="/images/slideshow_5.png" style="width:100%">
-  <img class="mySlides" src="/images/slideshow_6.png" style="width:100%">
-  <div class="w3-center w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-    <div class="w3-left w3-padding-left w3-hover-text-blue" onclick="plusDivs(-1)">&#10094;</div>
-    <div class="w3-right w3-padding-right w3-hover-text-blue" onclick="plusDivs(1)">&#10095;</div>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="currentDiv(1)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="currentDiv(2)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="currentDiv(3)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="currentDiv(4)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="currentDiv(5)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="currentDiv(6)"></span>
+  <img class="mySlides" src="/images/slideshow_1.png">
+  <img class="mySlides" src="/images/slideshow_2.png">
+  <img class="mySlides" src="/images/slideshow_3.png">
+  <img class="mySlides" src="/images/slideshow_4.png">
+  <img class="mySlides" src="/images/slideshow_5.png">
+  <img class="mySlides" src="/images/slideshow_6.png">
+  <div class="w3-center w3-section w3-large w3-text-white w3-display-bottommiddle">
+    <div class="w3-left w3-padding-left w3-hover-text-blue" onclick="showPrevious()">&#10094;</div>
+    <div class="w3-right w3-padding-right w3-hover-text-blue" onclick="showNext()">&#10095;</div>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="changeTo(1)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="changeTo(2)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="changeTo(3)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="changeTo(4)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="changeTo(5)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-blue" onclick="changeTo(6)"></span>
     </div>
 </div>
-
-<script src="/js/slideshow.js" type="text/javascript"></script>
 
 <h3>
 <a id="technology" class="anchor" href="#technology" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technology</h3>
@@ -269,7 +267,8 @@
       </footer>
     </div>
 
-    
+<script src="/js/jquery.js"></script>
+<script src="/js/slideshow.js"></script>
 
-  </body>
+</body>
 </html>
