--- a/views/search.erb
+++ b/views/search.erb
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row" background-color>
 		  <div class= "col-md-6">
-			 <h3>  <%=@total_num %> results for '<%=@keyword%>' : </h3> <br>
+			 <h3>  <%=@total_num %> search results for '<%=@keyword%>' : </h3> <br>
               <%= erb :feed %> 
           </div>
       </div>
