e-brochure screenshots changed

--- a/views/gh_page.erb
+++ b/views/gh_page.erb
@@ -48,12 +48,12 @@
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
 
 <div class="w3-content w3-display-container" style="max-width:800px">
-  <img class="mySlides" src="/images/slideshow_1.png" style="display:block">
-  <img class="mySlides" src="/images/slideshow_2.png">
-  <img class="mySlides" src="/images/slideshow_3.png">
-  <img class="mySlides" src="/images/slideshow_4.png">
-  <img class="mySlides" src="/images/slideshow_5.png">
-  <img class="mySlides" src="/images/slideshow_6.png">
+  <img class="mySlides" src="/images/slideshow1.png" style="display:block">
+  <img class="mySlides" src="/images/slideshow2.png">
+  <img class="mySlides" src="/images/slideshow3.png">
+  <img class="mySlides" src="/images/slideshow4.png">
+  <img class="mySlides" src="/images/slideshow5.png">
+  <img class="mySlides" src="/images/slideshow6.png">
   <div class="w3-center w3-section w3-large w3-text-white w3-display-bottommiddle">
     <div class="w3-left w3-padding-left w3-hover-text-blue" onclick="showPrevious()">&#10094;</div>
     <div class="w3-right w3-padding-right w3-hover-text-blue" onclick="showNext()">&#10095;</div>
