--- a/views/gh_page.erb
+++ b/views/gh_page.erb
@@ -9,7 +9,7 @@
     <style>
       .mySlides {display:none}
       .w3-left, .w3-right, .w3-badge {cursor:pointer}
-      .w3-badge {height:13px;width:13px;padding:0}
+      .w3-badge {height:15px;width:15px;padding:0}
       .navbar {display: none;}
     </style>
     <link rel="stylesheet" type="text/css" media="screen" href="/css/stylesheet.css">
@@ -254,10 +254,16 @@
   </div>
 </div>
 
+
+<h3>
+<a id="Screencast" class="anchor" href="#Screencast" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screencast</h3>
+<iframe width="1000" height="600" src="https://www.youtube.com/embed/wP453dUrSL4">
+</iframe>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>nanoTwitter was written by Tristan Ramirez de Haro (<a href="https://github.com/tristanibus" class="user-mention">@tristanibus</a>), Anne Charnes (<a href="https://github.com/timetwister4" class="user-mention">@timetwister4</a>) and Shaul Vin (<a href="https://github.com/b7q" class="user-mention">@b7q</a>) in the Fall of 2016. This project would not have been possible without the guidance and encouragement of our Professor, Pito Salas, and our teaching assistant, Karishma Khan.  </p>
+<p>nanoTwitter was written by Tristan Ramirez de Haro (<a href="https://github.com/tristanibus" class="user-mention">@tristanibus</a>), Anne Charnes (<a href="https://github.com/timetwister4" class="user-mention">@timetwister4</a>) and Shaul Vin (<a href="https://github.com/b7q" class="user-mention">@b7q</a>) in the Fall of 2016. This project would not have been possible without the guidance and encouragement of our Professor, Pito Salas, and our teaching assistants, Karishma Khan and Alex Suk.  </p>
       </section>
     </div>
 
